k8s/demo-suite/demo-suite.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: demo-suite
  annotations:
    enki.services/git-version: "${DEMO_SUITE_VERSION}"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: demo-suite
    spec:
      containers:
      - name: demo-suite
        image: ${REGISTRY}enki/demo-suite:${DEMO_SUITE_VERSION}
        readinessProbe:
          httpGet:
            path: /
            port: 80
        ports:
        - name: demo-sute
          containerPort: 80
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: demo-suite
spec:
  type: NodePort
  ports:
  - name: demo-suite-http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: demo-suite
