k8s/demo-suite/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-suite-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Enki
    nginx.ingress.kubernetes.io/auth-secret: enki-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - secretName: demo-enki-tls
    hosts:
    - demo.${K8S_ZONE}
  rules:
  - host: demo.${K8S_ZONE}
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-suite
          servicePort: demo-suite-http
